# QuantTrader

./: .env.example  .gitignore  AGENT.md  AGENTS.md  P8規格規劃.md  PROJECT_BRIEF.md  Phase10_個股分析_實作指引.md  config.yaml  install.bat  pyproject.toml  run_dev.bat  run_quanttrader.bat  run_quanttraderV2.bat  run_web.bat  已知問題.md  未涵蓋資料項目.md  測試指南.md  量化交易系統規格書_shellpig版.md  開發設計方針.md  驗證後已知問題.md
api/: job_manager.py  main.py
api/routers/: ai.py  analysis.py  config.py  jobs.py
docs/: mock_dashboard_payload.json
scripts/: dump_dashboard_payload_example.py
src/: __init__.py
src/ai/: advisor.py
src/analysis/: __init__.py  chip_analysis.py  pattern.py  technical_summary.py
src/backtest/: __init__.py  _helpers.py  account.py  batch.py  cost.py  dca.py  engine_event.py  engine_vec.py  events.py  metrics.py  report.py  sweep.py  (+1 more)
tests/: __init__.py  test_account.py  test_advisor.py  test_backtest_page.py  test_batch.py  test_chip_analysis.py  test_cleaner.py  test_config_ui_section.py  test_cost.py  test_dashboard_page.py  test_data_management_page.py  test_dca_backtest.py  test_e2e.py  test_engine_event.py  test_engine_vec.py  test_events.py  test_fetcher.py  test_indicators.py  test_maintenance.py  test_market.py  test_metrics.py  test_pattern.py  test_realtime.py  test_report.py  test_settings_page.py  test_stock_selector.py  test_storage.py  test_strategies.py  test_strategy_config.py  test_sweep.py  test_technical_summary.py  test_themes.py  test_walk_forward.py
web/: .gitignore  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
(+193 files in other folders)
