[project]
name = "quanttrader"
version = "0.2.0"
description = "Personal quantitative trading research toolkit for Taiwan stocks"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas>=2.2",
    "pandas-ta>=0.3.14b1",
    "duckdb>=1.0",
    "pyarrow>=17.0",
    "plotly>=5.22",
    "streamlit>=1.37",
    "anthropic>=0.34",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "yfinance>=0.2.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
ui = [
    "streamlit-extras>=0.4.3",
    "streamlit-option-menu>=0.3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require external APIs or network connectivity",
]
filterwarnings = [
    "ignore::pandas.errors.Pandas4Warning:pandas_ta",
]

[tool.ruff]
target-version = "py312"
line-length = 120
